force-app/main/default/objects/Open_Receivables__c/Open_Receivables__c.object-meta.xml
<CustomObject>
    <label>Open Receivables</label>
    <nameField>
        <label>Open Receivables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Receivables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>