force-app/main/default/objects/Open_Receivables__c/fields/Adjustment_Amt_USD__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amt_USD__c</fullName>
    <label>Adjustment Amt USD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>