force-app/main/default/objects/Open_Receivables__c/fields/Amt_Original_Local__c.field-meta.xml
<CustomField>
    <fullName>Amt_Original_Local__c</fullName>
    <label>Amt Original Local</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>