force-app/main/default/objects/Open_Receivables__c/fields/Credit_Memo_Amt__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Amt__c</fullName>
    <label>Credit Memo Amt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>