force-app/main/default/objects/Open_Receivables__c/fields/Customer_Name_Latin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Latin__c</fullName>
    <label>Customer Name Latin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>