force-app/main/default/objects/Open_Receivables__c/fields/Dispute_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Amount_USD__c</fullName>
    <label>Dispute Amount USD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>