force-app/main/default/objects/Open_Receivables__c/fields/Dispute_Number__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Number__c</fullName>
    <label>Dispute Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>