force-app/main/default/objects/Open_Receivables__c/fields/Invoice_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Nbr__c</fullName>
    <label>Invoice Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>