force-app/main/default/objects/Open_Receivables__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>