force-app/main/default/objects/Open_Receivables__c/fields/Transaction_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Nbr__c</fullName>
    <label>Transaction Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>